--- a/src/about.html
+++ b/src/about.html
@@ -150,8 +150,7 @@
                     <p class="is-size-4-mobile is-size-3">
                         We know the occasion may demand fast delivery.
                         We look to ship your orders as quickly as 
-                        possible. If you are located in the 
-                        the Southeast U.S. your package may arrive 
+                        possible. If you are located in the Southeast U.S. your package may arrive 
                         in 1-2 days.
                     </p>
                 </div>
