--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
                         <h3 class="title has-text-light">Bouquets</h3>
                         <p class="has-text-light">
                             Flat-Bottom Vase
-                            <br>Vase Height: 6" + 3" clippable stem
+                            <br>Vase Height: 6" + 3" clip-on stem
                             <br>Vase Diameter: Top ~ 4", Bottom ~ 2.4"
                             <br>Polystyrene is cut to be detachable.
                             <br>Can be bought without vase.
@@ -169,7 +169,7 @@
                             Metal Frame
                             <br>Frame Length: 17"
                             <br>Frame Width: 10.5"
-                            <br>Saddle: ~ 17" <span class="is-size-7">x</span> 16" <span class="is-size-7">x</span> 12"
+                            <br>Saddle: ~ 20" <span class="is-size-7">x</span> 16" <span class="is-size-7">x</span> 12"
                             <br>Price: $70+
                         </p>
                     </div>
@@ -294,7 +294,7 @@
         </div>
         <!-- end of 3 columns-->
         <div class="container has-text-centered">
-            <a href="about.html"><button class="button is-large has-background-primary has-text-light">Learn more about quailty</button></a>
+            <a href="about.html"><button class="button is-large has-background-primary has-text-light mb-6">Learn more about quailty</button></a>
         </div>
     </section>
     <!-- end of process -->
