--- a/src/gallery.html
+++ b/src/gallery.html
@@ -78,11 +78,9 @@
                     <h3 class="title">Shop</h3>
                     <p class="is-size-4-mobile is-size-3 has-background-white">
                         To view our current inventory, visit our store page on
-                        <a href="https://www.ebay.com/usr/rosyarc" -color="_blank">Ebay</a>.
-                        If you would like to use one of our images on your projects, visit
-                        our page on
-                        <a href="https://www.shutterstock.com/en/g/rosyarc?rid=388130795"
-                            -color="_blank">Shutterstock</a>.
+                        <a href="https://www.ebay.com/usr/rosyarc" target="_blank">Ebay</a>.
+                        If you would like to connect with us on social media, visit our page on
+                        <a href="https://www.pinterest.com/ihavearosyarc/" target="_blank">Pinterest</a>.
                     </p>
                 </div>
             </div>
@@ -466,16 +464,6 @@
                         <div class="card-image">
                             <figure class="image">
                                 <img src="images/gallery/bouquets/purple/purple-bouquet11.webp"
-                                    alt="purple, and white bouquet" loading="lazy">
-                            </figure>
-                        </div>
-                    </div>
-                </div>
-                <div class="column is-4 purple white">
-                    <div class="card">
-                        <div class="card-image">
-                            <figure class="image">
-                                <img src="images/gallery/bouquets/purple/purple-bouquet12.webp"
                                     alt="purple, and white bouquet" loading="lazy">
                             </figure>
                         </div>
@@ -1111,8 +1099,7 @@
                     <div class=" card">
                         <div class="card-image">
                             <figure class="image">
-                                <img src="images/gallery/saddles/blue-saddle01.webp"
-                                    alt="blue saddle" loading="lazy">
+                                <img src="images/gallery/saddles/blue-saddle01.webp" alt="blue saddle" loading="lazy">
                             </figure>
                         </div>
                     </div>
@@ -1141,8 +1128,8 @@
                     <div class=" card">
                         <div class="card-image">
                             <figure class="image">
-                                <img src="images/gallery/saddles/pink-saddle01.webp" alt="pink, purple, and white saddle"
-                                    loading="lazy">
+                                <img src="images/gallery/saddles/pink-saddle01.webp"
+                                    alt="pink, purple, and white saddle" loading="lazy">
                             </figure>
                         </div>
                     </div>
@@ -1201,8 +1188,8 @@
                     <div class="card">
                         <div class="card-image">
                             <figure class="image">
-                                <img src="images/gallery/saddles/red-saddle01.webp"
-                                    alt="red, and white saddle" loading="lazy">
+                                <img src="images/gallery/saddles/red-saddle01.webp" alt="red, and white saddle"
+                                    loading="lazy">
                             </figure>
                         </div>
                     </div>
@@ -1211,8 +1198,7 @@
                     <div class="card">
                         <div class="card-image">
                             <figure class="image">
-                                <img src="images/gallery/saddles/red-saddle02.webp"
-                                    alt="red saddle" loading="lazy">
+                                <img src="images/gallery/saddles/red-saddle02.webp" alt="red saddle" loading="lazy">
                             </figure>
                         </div>
                     </div>
@@ -1231,8 +1217,8 @@
                     <div class="card">
                         <div class="card-image">
                             <figure class="image">
-                                <img src="images/gallery/saddles/yellow-saddle02.webp"
-                                    alt="yellow, and white saddle" loading="lazy">
+                                <img src="images/gallery/saddles/yellow-saddle02.webp" alt="yellow, and white saddle"
+                                    loading="lazy">
                             </figure>
                         </div>
                     </div>
@@ -1283,11 +1269,10 @@
                     <p class="is-size-3">Shop</p>
                     <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc"
                             target="_blank">Ebay</a></p>
+                    <p><a class="has-text-light is-underlined" href="https://www.pinterest.com/ihavearosyarc/"
+                            target="_blank">Pinterest</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.redbubble.com/people/rosyarc/shop"
                             target="_blank">Redbubble</a></p>
-                    <p><a class="has-text-light is-underlined"
-                            href="https://www.shutterstock.com/en/g/rosyarc?rid=388130795"
-                            target="_blank">Shutterstock</a></p>
                 </div>
             </div>
             <div class="column">
