--- a/src/index.html
+++ b/src/index.html
@@ -115,8 +115,8 @@
                     <h3 class="title">Saddles</h3>
                     <p class="is-size-4-mobile is-size-3 has-background-white">
                         An array of flowers glued and wired to a
-                        metal frame that can be fit over a headstone. 
-                        </p>
+                        metal frame that can be fit over a headstone.
+                    </p>
                 </div>
                 <div class="column">
                     <h3 class="title">Memorials</h3>
@@ -213,8 +213,8 @@
                     <div class="card-image">
                         <figure class="image is-3by2">
                             <img srcset="images/index/white-cross01.webp  578w,
-                         images/index/white-cross01-small.webp 416w" sizes="(max-width: 450px) 416px"
-                                alt="white cross" loading="lazy">
+                         images/index/white-cross01-small.webp 416w" sizes="(max-width: 450px) 416px" alt="white cross"
+                                loading="lazy">
                         </figure>
                     </div>
                 </div>
@@ -294,7 +294,8 @@
         </div>
         <!-- end of 3 columns-->
         <div class="container has-text-centered">
-            <a href="about.html"><button class="button is-large has-background-primary has-text-light mb-6">Learn more about quailty</button></a>
+            <a href="about.html"><button class="button is-large has-background-primary has-text-light mb-6">Learn more
+                    about quailty</button></a>
         </div>
     </section>
     <!-- end of process -->
@@ -306,11 +307,12 @@
             <div class="column">
                 <div class="content has-text-centered has-text-light">
                     <p class="is-size-3">Shop</p>
-                    <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc" target="_blank">Ebay</a></p>
+                    <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc"
+                            target="_blank">Ebay</a></p>
+                    <p><a class="has-text-light is-underlined" href="https://www.pinterest.com/ihavearosyarc/"
+                            target="_blank">Pinterest</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.redbubble.com/people/rosyarc/shop"
                             target="_blank">Redbubble</a></p>
-                    <p><a class="has-text-light is-underlined" href="https://www.shutterstock.com/en/g/rosyarc?rid=388130795"
-                            target="_blank">Shutterstock</a></p>
                 </div>
             </div>
             <div class="column">
