--- a/src/about.html
+++ b/src/about.html
@@ -117,7 +117,7 @@
                         Vases are a sturdy flat-bottom plastic
                         that holds your arrangement in place.
                         The polystyrene used is commercial grade,
-                        making it resistant to various weather 
+                        making it resistant to various weather
                         conditions.
                     </p>
                 </div>
@@ -133,24 +133,24 @@
         </div>
         <!-- start of 2 columns -->
         <div class="section">
-            <div id="delivery"  class="columns has-text-centered">
+            <div id="delivery" class="columns has-text-centered">
                 <div class="column">
                     <h3 class="title">Inventory</h3>
                     <p class="is-size-4-mobile is-size-3">
-                        New arrangements are uploaded throughout 
+                        New arrangements are uploaded throughout
                         the week. If you're looking for more products of
                         a particular design, ask us if we have more
                         of the flowers in stock.
                     </p>
                     <a class="has-text-light" href="https://www.ebay.com/usr/rosyarc" target="_blank"> <button
-                        class="button is-success is-medium my-6">Ebay store</button></a>
+                            class="button is-success is-medium my-6">Ebay store</button></a>
                 </div>
                 <div class="column">
                     <h3 class="title">Shipping</h3>
                     <p class="is-size-4-mobile is-size-3">
                         We know the occasion may demand fast delivery.
-                        We look to ship your orders as quickly as 
-                        possible. If you are located in the Southeast U.S. your package may arrive 
+                        We look to ship your orders as quickly as
+                        possible. If you are located in the Southeast U.S. your package may arrive
                         in 1-2 days.
                     </p>
                 </div>
@@ -167,11 +167,12 @@
             <div class="column">
                 <div class="content has-text-centered has-text-light">
                     <p class="is-size-3">Shop</p>
-                    <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc" target="_blank">Ebay</a></p>
+                    <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc"
+                            target="_blank">Ebay</a></p>
+                    <p><a class="has-text-light is-underlined" href="https://www.pinterest.com/ihavearosyarc/"
+                            target="_blank">Pinterest</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.redbubble.com/people/rosyarc/shop"
                             target="_blank">Redbubble</a></p>
-                    <p><a class="has-text-light is-underlined" href="https://www.shutterstock.com/en/g/rosyarc?rid=388130795"
-                            target="_blank">Shutterstock</a></p>
                 </div>
             </div>
             <div class="column">
