--- a/src/about.html
+++ b/src/about.html
@@ -15,16 +15,6 @@
     <script src="https://kit.fontawesome.com/dc7be97532.js" crossorigin="anonymous"></script>
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z8JD0CCYHL"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-Z8JD0CCYHL');
-</script>
-
 <body>
     <!-- start of navigation -->
     <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
@@ -153,8 +143,9 @@
                             a particular design, ask us if we have more
                             of the flowers in stock.
                         </p>
-                        <a class="has-text-light" href="https://www.ebay.com/usr/rosyarc" target="_blank" rel="noopener noreferrer"> <button
-                                class="button is-success is-medium my-6">Ebay store</button></a>
+                        <a class="has-text-light" href="https://www.ebay.com/usr/rosyarc" target="_blank"
+                            rel="noopener noreferrer"> <button class="button is-success is-medium my-6">Ebay
+                                store</button></a>
                     </div>
                     <div class="column">
                         <h3 class="title">Shipping</h3>
@@ -179,8 +170,8 @@
             <div class="column">
                 <div class="content has-text-centered has-text-light">
                     <p class="is-size-3">Shop</p>
-                    <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc"
-                            target="_blank" rel="noopener noreferrer">Ebay</a></p>
+                    <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc" target="_blank"
+                            rel="noopener noreferrer">Ebay</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.pinterest.com/ihavearosyarc/"
                             target="_blank" rel="noopener noreferrer">Pinterest</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.redbubble.com/people/rosyarc/shop"
