--- a/src/diy-cemetery-bouquet.html
+++ b/src/diy-cemetery-bouquet.html
@@ -17,22 +17,15 @@
     <meta property="og:url" content="https://www.rosyarc.com/diy-cemetery-bouquet.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="DIY Cemetery Bouquet" />
-    <meta property="og:description" content="We've created hundreds of cemetery bouquets. Here's how to create a cemetery bouquet of your own in 4 steps." />
+    <meta property="og:description"
+        content="We've created hundreds of cemetery bouquets. Here's how to create a cemetery bouquet of your own in 4 steps." />
     <meta property="og:image" content="https://rosyarc.com/images/article1/flowers.webp" />
     <meta name="twitter:image" content="https://rosyarc.com/images/article1/flowers.webp">
     <meta property="pinterest:image" content="https://rosyarc.com/images/article1/flowers.webp">
-    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=6454f47e8422190019dbb7f6&product=sop' async='async'></script>
+    <script type='text/javascript'
+        src='https://platform-api.sharethis.com/js/sharethis.js#property=6454f47e8422190019dbb7f6&product=sop'
+        async='async'></script>
 </head>
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z8JD0CCYHL"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-Z8JD0CCYHL');
-</script>
 
 <body>
     <!-- start of navigation -->
@@ -446,7 +439,7 @@
                                 <div class="block">
                                     <p class="is-size-4-desktop is-size-5-tablet is-size-4-mobile">
                                         You can also use Mod Podge Outdoor
-                                        to seal your bouquet base. This will give 
+                                        to seal your bouquet base. This will give
                                         your bouquet an extra weather barrier.
                                     </p>
                                 </div>
@@ -495,7 +488,8 @@
                     <p class="is-size-4 is-italic">
                         Article by: Rosy Arc
                     </p>
-                    <!-- ShareThis BEGIN --><div class="sharethis-inline-share-buttons"></div><!-- ShareThis END -->              
+                    <!-- ShareThis BEGIN -->
+                    <div class="sharethis-inline-share-buttons"></div><!-- ShareThis END -->
                 </footer>
             </div>
         </article>
