--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,6 @@
     <link rel="stylesheet" href="mybulma/css/mystyles.css" />
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z8JD0CCYHL"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-Z8JD0CCYHL');
-</script>
-
 <body>
 
     <!-- start of navigation -->
@@ -261,17 +251,19 @@
                             To view our current inventory, visit
                             our store page on Ebay.
                         </p>
-                        <a class="has-text-light" href="https://www.ebay.com/usr/rosyarc" target="_blank" rel="noopener noreferrer">
+                        <a class="has-text-light" href="https://www.ebay.com/usr/rosyarc" target="_blank"
+                            rel="noopener noreferrer">
                             <button class="button is-success is-medium my-6">View Inventory</button>
                         </a>
                     </div>
                     <div class="column">
                         <h3 class="title has-text-light">Pinterest</h3>
                         <p class="is-size-4-mobile is-size-3">
-                            Connect with us on social media 
+                            Connect with us on social media
                             to keep up to date with our latest designs.
                         </p>
-                        <a class="has-text-light" href="https://www.pinterest.com/ihavearosyarc/" target="_blank" rel="noopener noreferrer">
+                        <a class="has-text-light" href="https://www.pinterest.com/ihavearosyarc/" target="_blank"
+                            rel="noopener noreferrer">
                             <button class="button is-success is-medium my-6">Keep in Touch</button>
                         </a>
                     </div>
@@ -326,8 +318,8 @@
             <div class="column">
                 <div class="content has-text-centered has-text-light">
                     <p class="is-size-3">Shop</p>
-                    <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc"
-                            target="_blank" rel="noopener noreferrer">Ebay</a></p>
+                    <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc" target="_blank"
+                            rel="noopener noreferrer">Ebay</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.pinterest.com/ihavearosyarc/"
                             target="_blank" rel="noopener noreferrer">Pinterest</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.redbubble.com/people/rosyarc/shop"
