--- a/src/gallery.html
+++ b/src/gallery.html
@@ -15,16 +15,6 @@
     <script src="https://kit.fontawesome.com/dc7be97532.js" crossorigin="anonymous"></script>
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z8JD0CCYHL"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-Z8JD0CCYHL');
-</script>
-
 <body>
 
     <!-- start of navigation -->
@@ -89,9 +79,11 @@
                         <h3 class="title">Shop</h3>
                         <p class="is-size-4-mobile is-size-3 has-background-white">
                             To view our current inventory, visit our store page on
-                            <a href="https://www.ebay.com/usr/rosyarc" target="_blank" rel="noopener noreferrer">Ebay</a>.
+                            <a href="https://www.ebay.com/usr/rosyarc" target="_blank"
+                                rel="noopener noreferrer">Ebay</a>.
                             If you would like to connect with us on social media, visit our page on
-                            <a href="https://www.pinterest.com/ihavearosyarc/" target="_blank" rel="noopener noreferrer">Pinterest</a>.
+                            <a href="https://www.pinterest.com/ihavearosyarc/" target="_blank"
+                                rel="noopener noreferrer">Pinterest</a>.
                         </p>
                     </div>
                 </div>
@@ -1280,8 +1272,8 @@
             <div class="column">
                 <div class="content has-text-centered has-text-light">
                     <p class="is-size-3">Shop</p>
-                    <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc"
-                            target="_blank" rel="noopener noreferrer">Ebay</a></p>
+                    <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc" target="_blank"
+                            rel="noopener noreferrer">Ebay</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.pinterest.com/ihavearosyarc/"
                             target="_blank" rel="noopener noreferrer">Pinterest</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.redbubble.com/people/rosyarc/shop"
