--- a/src/about.html
+++ b/src/about.html
@@ -98,9 +98,9 @@
         <!-- end of inspire -->
         <!-- start of quality -->
         <section class="section has-text-light has-background-secondary">
-            <div class="container has-text-centered my-6">
+            <header class="container has-text-centered my-6">
                 <h2 class="is-size-2 has-text-weight-bold">Quality</h2>
-            </div>
+            </header>
             <!-- start of 2 columns -->
             <div class="section">
                 <div id="quality" class="columns has-text-centered">
@@ -129,23 +129,20 @@
         <!-- end of quality -->
         <!-- start of delivery -->
         <section class="section">
-            <div class="container has-text-centered my-6">
+            <header class="container has-text-centered my-6">
                 <h2 class="is-size-2 has-text-weight-bold">Delivery</h2>
-            </div>
+            </header>
             <!-- start of 2 columns -->
             <div class="section">
                 <div id="delivery" class="columns has-text-centered">
                     <div class="column">
                         <h3 class="title">Inventory</h3>
                         <p class="is-size-4-mobile is-size-3">
-                            New arrangements are uploaded throughout
-                            the week. If you're looking for more products of
-                            a particular design, ask us if we have more
+                            New arrangements are uploaded multiple times 
+                            weekly. If you're looking for more arrangements of
+                            a current design, ask us if we have more
                             of the flowers in stock.
                         </p>
-                        <a class="has-text-light" href="https://www.ebay.com/usr/rosyarc" target="_blank"
-                            rel="noopener noreferrer"> <button class="button is-success is-medium my-6">Ebay
-                                store</button></a>
                     </div>
                     <div class="column">
                         <h3 class="title">Shipping</h3>
