--- a/src/gallery.html
+++ b/src/gallery.html
@@ -64,31 +64,43 @@
     <!-- end of hero -->
     <main>
         <!-- start of info section -->
-        <section class="section has-background-light">
-            <div class="container has-text-centered">
-                <!-- start of columns -->
-                <div id="gallery" class="columns my-6">
-                    <div class="column">
-                        <h3 class="title">Gallery</h3>
-                        <p class="is-size-4-mobile is-size-3 has-background-white">
-                            Here are some of our previous designs. We offer detachable
-                            ground vase arrangements, saddles, and other memorial arrangements.
-                        </p>
-                    </div>
-                    <div class="column">
-                        <h3 class="title">Shop</h3>
-                        <p class="is-size-4-mobile is-size-3 has-background-white">
-                            To view our current inventory, visit our store page on
-                            <a href="https://www.ebay.com/usr/rosyarc" target="_blank"
-                                rel="noopener noreferrer">Ebay</a>.
-                            If you would like to connect with us on social media, visit our page on
-                            <a href="https://www.pinterest.com/ihavearosyarc/" target="_blank"
-                                rel="noopener noreferrer">Pinterest</a>.
-                        </p>
-                    </div>
+        <section class="section has-background-light has-text-centered">
+            <!-- start of columns -->
+            <div id="gallery" class="columns my-6">
+                <div class="column">
+                    <h3 class="title">Gallery</h3>
+                    <p class="is-size-4-mobile is-size-3">
+                        Here are some of our previous designs. We offer detachable
+                        ground vase bouquets, saddles, and other memorial arrangements.
+                    </p>
                 </div>
-                <!-- end of columns -->
+                <div class="column">
+                    <h3 class="title">Inventory</h3>
+                    <p class="is-size-4-mobile is-size-3">
+                        To keep up to date with our current designs, follow us on Ebay,
+                        and Pinterest. You can find new arrangements every week.
+                    </p>
+                </div>
             </div>
+            <!-- end of columns -->
+            <!-- start of buttons -->
+            <div class="buttons is-justify-content-center">
+                <a class="has-text-light button is-medium is-success my-6" href="https://www.ebay.com/usr/rosyarc"
+                    target="_blank" rel="noopener noreferrer">
+                    <span class="icon">
+                        <i class="fa-solid fa-store"></i>
+                    </span>
+                    <span>Shop Inventory</span>
+                </a>
+                <a class="has-text-light button is-medium is-success my-6"
+                    href="https://www.pinterest.com/ihavearosyarc/" target="_blank" rel="noopener noreferrer">
+                    <span>Follow on </span>
+                    <span class="icon">
+                        <i class="fa-brands fa-pinterest"></i>
+                    </span>
+                </a>
+            </div>
+            <!-- end of buttons -->
         </section>
         <!-- end of info section-->
         <!-- start of tabs section -->
@@ -152,7 +164,8 @@
             <hr class="has-background-black mt-2">
         </section>
         <!-- end of tabs section -->
-        <section class="container has-text-centered">
+        <!-- start of gallery -->
+        <section class="container has-text-centered mb-6">
             <div class="section">
                 <div class="columns is-multiline has-background-light">
                     <!-- start of blue -->
@@ -1263,6 +1276,7 @@
                 </div>
             </div>
         </section>
+        <!-- end of gallery -->
     </main>
     <!-- go to TOP -->
     <button id="top" class="button has-background-black has-text-light py-4 px-4">Top</button>
