--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="images\rosy-arc-favicon.svg" />
     <link rel="stylesheet" href="mybulma/css/mystyles.css" />
+    <script src="https://kit.fontawesome.com/dc7be97532.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -67,9 +68,9 @@
     <main>
         <!-- start design -->
         <section class="section">
-            <div class="container has-text-centered my-6">
+            <header class="container has-text-centered my-6">
                 <h2 class="is-size-2 has-text-weight-bold">Design</h2>
-            </div>
+            </header>
             <!-- start of 3 columns-->
             <div class="section">
                 <div id="design" class="columns is-vcentered has-text-centered">
@@ -99,29 +100,29 @@
         <!-- end of design -->
         <!-- start products -->
         <section class="section has-background-light">
-            <div class="container has-text-centered my-6">
+            <header class="container has-text-centered my-6">
                 <h2 class="is-size-2 has-text-weight-bold">Products</h2>
-            </div>
+            </header>
             <!-- start of 3 columns-->
             <div id="products" class="section">
                 <div class="columns has-text-centered">
                     <div class="column">
                         <h3 class="title">Bouquets</h3>
-                        <p class="is-size-4-mobile is-size-3 has-background-white">A detachable bouquet
+                        <p class="is-size-4-mobile is-size-3">A detachable bouquet
                             of flowers glued to polystyrene that can be bought
                             with or without a green ground vase.
                         </p>
                     </div>
                     <div class="column">
                         <h3 class="title">Saddles</h3>
-                        <p class="is-size-4-mobile is-size-3 has-background-white">
+                        <p class="is-size-4-mobile is-size-3">
                             An array of flowers glued and wired to a
                             metal frame that can be fit over a headstone.
                         </p>
                     </div>
                     <div class="column">
                         <h3 class="title">Memorials</h3>
-                        <p class="is-size-4-mobile is-size-3 has-background-white">
+                        <p class="is-size-4-mobile is-size-3">
                             A cut polystyrene shape that is decorated
                             with flowers. They can be used on easel stands,
                             hung on the wall, or attached to a cemetery vase.
@@ -134,9 +135,9 @@
         <!-- end of products -->
         <!-- start of measurements -->
         <section class="section has-background-black has-text-light">
-            <div class="container has-text-centered py-3">
+            <header class="container has-text-centered py-3">
                 <h2 class="is-size-2 has-text-weight-bold">Measurements</h2>
-            </div>
+            </header>
             <div class="columns">
                 <!-- start of column -->
                 <div class="column">
@@ -228,10 +229,10 @@
         </section>
         <!-- end of measurements-->
         <!-- start purchasing -->
-        <section class="section has-text-light has-background-primary">
-            <div class="container has-text-centered my-6">
+        <section class="section has-background-primary has-text-light">
+            <header class="container has-text-centered my-6">
                 <h2 class="is-size-2 has-text-weight-bold">Purchase</h2>
-            </div>
+            </header>
             <!-- start of 3 columns-->
             <div class="section">
                 <div id="purchase" class="columns has-text-centered">
@@ -241,9 +242,12 @@
                             You can view some of our previous
                             designs on our gallery page.
                         </p>
-                        <a class="has-text-light" href="gallery.html"> <button
-                                class="button is-success is-medium my-6">View
-                                Gallery</button></a>
+                        <a class="has-text-light button is-medium is-success my-6" href="gallery.html">
+                            <span class="icon">
+                                <i class="fa-regular fa-images"></i>
+                            </span>
+                            <span>View Designs</span>
+                        </a>
                     </div>
                     <div class="column">
                         <h3 class="title has-text-light">Store</h3>
@@ -251,20 +255,26 @@
                             To view our current inventory, visit
                             our store page on Ebay.
                         </p>
-                        <a class="has-text-light" href="https://www.ebay.com/usr/rosyarc" target="_blank"
-                            rel="noopener noreferrer">
-                            <button class="button is-success is-medium my-6">View Inventory</button>
+                        <a class="has-text-light button is-medium is-success my-6"
+                            href="https://www.ebay.com/usr/rosyarc" target="_blank" rel="noopener noreferrer">
+                            <span class="icon">
+                                <i class="fa-solid fa-store"></i>
+                            </span>
+                            <span>Shop Inventory</span>
                         </a>
                     </div>
                     <div class="column">
-                        <h3 class="title has-text-light">Pinterest</h3>
+                        <h3 class="title has-text-light">Social Media</h3>
                         <p class="is-size-4-mobile is-size-3">
                             Connect with us on social media
                             to keep up to date with our latest designs.
                         </p>
-                        <a class="has-text-light" href="https://www.pinterest.com/ihavearosyarc/" target="_blank"
-                            rel="noopener noreferrer">
-                            <button class="button is-success is-medium my-6">Keep in Touch</button>
+                        <a class="has-text-light button is-medium is-success my-6"
+                            href="https://www.pinterest.com/ihavearosyarc/" target="_blank" rel="noopener noreferrer">
+                            <span>Follow on </span>
+                            <span class="icon">
+                                <i class="fa-brands fa-pinterest"></i>
+                            </span>
                         </a>
                     </div>
                 </div>
@@ -274,28 +284,28 @@
         <!-- end of purchasing -->
         <!-- start process -->
         <section class="section">
-            <div class="container has-text-centered my-6">
+            <header class="container has-text-centered my-6">
                 <h2 class="is-size-2 has-text-weight-bold">Process</h2>
-            </div>
+            </header>
             <!-- start of 3 columns-->
             <div id="process" class="section">
                 <div class="columns has-text-centered">
                     <div class="column">
                         <h3 class="title">Bouquets</h3>
-                        <p class="is-size-4-mobile is-size-3 has-background-light">Each flower is glued on sealed
+                        <p class="is-size-4-mobile is-size-3">Each flower is glued on sealed
                             polystyrene. The
                             bouquets are detachable so can be moved to another vase.
                         </p>
                     </div>
                     <div class="column">
                         <h3 class="title">Saddles</h3>
-                        <p class="is-size-4-mobile is-size-3 has-background-light">Sealed polystyrene is glued and wired
+                        <p class="is-size-4-mobile is-size-3">Sealed polystyrene is glued and wired
                             to
                             the saddle frame before flowers are added.</p>
                     </div>
                     <div class="column">
                         <h3 class="title">Memorials</h3>
-                        <p class="is-size-4-mobile is-size-3 has-background-light">Polystyrene is cut with hotwire. The
+                        <p class="is-size-4-mobile is-size-3">Polystyrene is cut with hotwire. The
                             designer then paints, and seals the base. Flowers are added at the end.
                         </p>
                     </div>
@@ -303,9 +313,12 @@
             </div>
             <!-- end of 3 columns-->
             <div class="container has-text-centered">
-                <a href="about.html"><button class="button is-large has-background-primary has-text-light mb-6">Learn
-                        more
-                        about quailty</button></a>
+                <a class="has-text-light button is-large is-primary has-background-primary mb-6" href="about.html">
+                    <span class="icon">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </span>
+                    <span>Learn more about quality</span>
+                </a>
             </div>
         </section>
         <!-- end of process -->
@@ -357,6 +370,7 @@
     <!-- end of footer -->
     <script src="js/global.js"></script>
     <script src="js/indexFilter.js"></script>
+
 </body>
 
 </html>
