--- a/src/diy-cemetery-bouquet.html
+++ b/src/diy-cemetery-bouquet.html
@@ -142,7 +142,7 @@
                         <span class="icon">
                             <i class="fa-solid fa-bag-shopping"></i>
                         </span>
-                        <span>Joanne Fabrics</span>
+                        <span>Joann Fabrics</span>
                     </a>
                     <a class="has-text-light button  is-danger" <a
                         href="https://www.michaels.com/shop/floral/floral-stems-bushes-picks/floral-bushes"
@@ -322,7 +322,9 @@
                                 <p class="is-size-4-mobile is-size-4-tablet is-size-3">
                                     If your insert, or polystyrene does not
                                     fit your vase, you're going to need to cut
-                                    the foam with a hotwire tool.
+                                    the foam with a hotwire tool. The inserts don't 
+                                    have to be perfect, but tight enough to hold your 
+                                    flower arrangement in place.
                                 </p>
                             </div>
                         </div>
@@ -387,7 +389,7 @@
             <section class="section has-background-light">
                 <div class="section">
                     <header class="container has-text-centered my-6">
-                        <h3 class="is-size-3 has-text-weight-bold">Cutting with hotwire</h3>
+                        <h3 class="is-size-2 has-text-weight-bold">Cutting with hotwire</h3>
                     </header>
                     <!-- start of two columns -->
                     <div class="section">
@@ -402,15 +404,41 @@
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
                                         With a hotwire handheld kit, you can shape the
                                         size of your circles. There are plenty of affordable
-                                        options in crafting stores.
+                                        options in crafting stores like Hobby Lobby.
                                     </p>
                                 </div>
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
-                                        They are sufficient enough for
-                                        this project, but are not reliable enough
-                                        to last long term if you're going to cut
-                                        a lot of polystyrene in future projects.
+                                        These hotwire tools are sufficient enough for
+                                        this project, but may take more patience when first 
+                                        using.
+                                    </p>
+                                </div>
+                                <div class="block">
+                                    <p class="is-size-4-mobile is-size-4-tablet is-size-3">
+                                        A common issue with these tools involves the lack of tension 
+                                        control they may have. As you're cutting polystyrene, the hotwire 
+                                        may loosen and slide down the tool, or even break.
+                                    </p>
+                                </div>
+                                <div class="block">
+                                    <p class="is-size-4-mobile is-size-4-tablet is-size-3">
+                                        This can lead to accuracy issues when cutting polystyrene. 
+                                        Also, having to stop and readjust the wire 
+                                        constantly can be very frustrating. 
+                                    </p>
+                                </div>
+                                <div class="block">
+                                    <p class="is-size-4-mobile is-size-4-tablet is-size-3">
+                                        So always make sure your wire is tied 
+                                        tightly before you start cutting by wrapping each end of the 
+                                        wire around the tool, and then checking the wire tension.
+                                    </p>
+                                </div>
+                                <div class="block">
+                                    <p class="is-size-4-mobile is-size-4-tablet is-size-3">
+                                        Other issues with these affordable hotwire tools are 
+                                        questionable durability, and a lack of safety features.
                                     </p>
                                 </div>
                             </div>
@@ -423,17 +451,45 @@
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
                                         A hotwire tabletop is a more
-                                        long term option. Some come with an attachment that
+                                        long term option. If choosing a tabletop 
+                                        we suggest you use polystyrene squares or blocks to make your circles. 
+                                        You can buy a sheet of polystyrene, and cut small squares when you need to 
+                                        make a bouquet base.
+                                    </p>
+                                </div>
+                                <div class="block">
+                                    <p class="is-size-4-mobile is-size-4-tablet is-size-3">
+                                        Some hotwire tabletops come with an attachment that
                                         lets you create perfect circles easily.
+                                        This attachment is placed on an adjustable guide arm ("dimension ruler"), and has 
+                                        a spike to hold your polystyrene.
+                                    </p>
+                                </div>
+                                <div class="block">
+                                    <p class="is-size-4-mobile is-size-4-tablet is-size-3">
+                                        Place the piece of polystyrene on the attachment.   
+                                        Move the guide arm and the attachment close to your 
+                                        hotwire pillar. Turn your hotwire temperature up, wait until it heats up, then
+                                        slowly rotate your polystyrene completely until your circle is done, turn your hotwire off. 
+                                        The spike keeps the polystyrene in place, whilst the hotwire is cutting off the unnecessary ends.
                                     </p>
                                 </div>
                                 <div class="block">
                                     <p class="is-size-4-mobile is-size-4-tablet is-size-3">
                                         You will need to cut multiple circles for one bouquet.
                                         For example,
-                                        you may need one circle with a 3 inch diameter
-                                        for the bottom of the vase, and another that is 3.4 inches
+                                        you may need one circle with a 2.6 inch diameter
+                                        for the bottom of the vase, and another that is 3 inches
                                         for the top of the vase.
+                                    </p>
+                                </div>
+                                <div class="block">
+                                    <p class="is-size-4-mobile is-size-4-tablet is-size-3">
+                                        Remember a circle's radius is half the size of a circle. If you need a 
+                                        circle that is 3 inches long, it must have a 1.5 inch radius. From your hotwire, your 
+                                        attachment should be 1.5 inches away. Make sure the spike on the attachment is in the 
+                                        center of your polystyrene area, and start cutting. Depending on your measurements, and how much your hotwire 
+                                        takes off, your circle should be around the desired 3 inch length. 
                                     </p>
                                 </div>
                             </div>
