--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
                     <div class="column">
                         <h3 class="title">Arrangement</h3>
                         <p class="is-size-4-mobile is-size-3">
-                            Each arrangement is created by one designer, conveying its
+                            Each arrangement is created by one designer from beginning to end, conveying its
                             uniqueness through inspiration. They are inspired from an array of
                             silk flowers and the season.
                         </p>
